DevTools: Fix heap snapshot grid misalignment after r152691
r152691 has changed behavior of float items in nowrap containers.
Adjust heap snapshot CSS to conform to the new semantics.

BUG=248995
R=apavlov@chromium.org

Review URL: https://codereview.chromium.org/17261019

git-svn-id: svn://svn.chromium.org/blink/trunk@152770 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/heapProfiler.css
+++ b/front_end/heapProfiler.css
@@ -129,9 +129,9 @@ body.inactive .heap-snapshot-sidebar-tree-item.wait.selected .icon {
 }
 
 .heap-snapshot-view .data-grid span.percent-column {
-    color: grey;
+    color: #999;
     width: 32px;
-    float: right;
+    display: inline-block;
 }
 
 .heap-snapshot-view .console-formatted-object,
